syntax = "proto3";

package users.v1;

option go_package = "github.com/bd878/gallery/server/api";

service Users {
	rpc GetUser(GetUserRequest) returns (User);
	rpc FindUser(FindUserRequest) returns (User);
}

message User {
	int32     id = 1;
	string    name = 2;
	string    token = 3;
	int64     expires_utc_nano = 4;
}

message GetUserRequest {
	int32 id = 1;
}

message FindUserRequest {
	oneof search_key {
		string name = 1;
		string token = 2;
	}
}